syntax = "proto3";
option go_package = "api/pb";

message PresignPutObjectResponse {
    string URL = 1;
}